[package]
name = "light-node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = {version = "0.28.0", features=["sqlite", "keys-bip39", "rpc",
"futures",  "key-value-db", "bitcoincore-rpc", "compact_filters"] }
dirs-next = "2.0.0"

lightning = { version = "0.0.115", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.115", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.23" }
lightning-net-tokio = { version = "0.0.115" }
lightning-persister = { version = "0.0.115" }
lightning-background-processor = { version = "0.0.115", features = [ "futures" ] }
lightning-rapid-gossip-sync = { version = "0.0.115" }

base64 = "0.13.0"
bitcoin = "0.29.0"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"
libc = "0.2"

# futures = "0.3"
chrono = "0.4"
rand = "0.4.0"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
fs = "0.0.5"

actix-web = "4"
env_logger = "0.10.0"
