[package]
name = "soul"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bitcoin = "0.29.0"
env_logger = "0.10.0"
dirs-next = "2.0.0"
lightning-block-sync = { version = "0.0.115", features = [ "rpc-client" ] }
base64 = "0.13.0"

lightning = { version = "0.0.115", features = ["max_level_trace"] }
bdk = { version = "0.28.0", features = ["sqlite", "keys-bip39", "rpc"]}
esplora-client = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
